--- a/MVArchitectureDemo.xcodeproj/xcshareddata/xcschemes/MVArchitectureDemo.xcscheme
+++ b/MVArchitectureDemo.xcodeproj/xcshareddata/xcschemes/MVArchitectureDemo.xcscheme
@@ -32,6 +32,9 @@
             reference = "container:MVArchitectureDemo.xctestplan"
             default = "YES">
          </TestPlanReference>
+         <TestPlanReference
+            reference = "container:MVArchitectureDemoUI.xctestplan">
+         </TestPlanReference>
       </TestPlans>
       <Testables>
          <TestableReference
